# python-project-83

./: .env  .gitignore  Makefile  README.md  config.py  database.sql  db.py  gunicorn_config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pyci.yml
page_analyzer/: app.py  db_operations.py  queries.py  validator.py
page_analyzer/static/: styles_header.css  styles_index.css
page_analyzer/styles/: styles_index.css
page_analyzer/templates/: 404_not_found.html  default.html  header.html  index.html  url.html  urls.html
