[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LuybovB <grandprinceess7777@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
validators = "^0.28.1"
bs4 = "^0.0.2"
requests = "^2.31.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.scripts]
page_analyzer = "page_analyzer.app:app"